--- a/asset/style.css
+++ b/asset/style.css
@@ -17,3 +17,11 @@
 #formulario{
   background-color: palevioletred;
 }
+.password{
+  color: white;
+
+}
+.password-t{
+  text-align: center;
+  color:white;
+}
